1.jdk版本升级指定21 2.添加代码生成模块(未发布)